chore: Fix component package name